--- a/manuscript/charr_ms.tex
+++ b/manuscript/charr_ms.tex
@@ -35,7 +35,8 @@
 % ---------------------------------------------------------------------------------------
 
 
-\title{Opposing trends in survival and recruitment slow recovery of an overexploited fishery}
+\title{Opposing trends in survival and recruitment slow the recovery 
+        of an historically overexploited fishery}
 
 \author{
 Joseph S. Phillips$^{1,2, \dagger}$ \\
@@ -59,7 +60,7 @@ H\'{o}lar University, Skagafj\"{o}r{\dh}ur 551 Iceland
 \noindent{} 2. Department of Integrative Biology, 
 University of Wisconsin, Madison, Wisconsin 53706 USA
 
-\noindent{} 3. Marine and Freshwater Research Institute, Reykjav\'{i}k, Iceland
+\noindent{} 3. Marine and Freshwater Research Institute, Reykjav\'{i}k Iceland
 
 \noindent{} $\dagger$ E-mail: joseph@holar.is
 
@@ -67,7 +68,7 @@ University of Wisconsin, Madison, Wisconsin 53706 USA
 
 \bigskip
 
-Running head: {Myvatn charr}
+Running head: {Arctic charr demography}
 
 \linenumbers{}
 
@@ -126,18 +127,24 @@ Running head: {Myvatn charr}
 \clearpage
 \begin{table}
 \caption{\label{tab:param}
-Parameters.}
+Posterior summaries of the parameters from the demographic model.
+Catch rates are dimensionless and constrained between 0 and 1,
+while the random walk SD are on the scale of either logit-survival or log-recruitment
+and constrained to be >0.
+Uncertainty intervals are based on 68\% quantiles, 
+matching the nominal coverage of standard errors.
+}
 \setlength{\tabcolsep}{12pt}
 \begin{tabular}{llc}
 \toprule
-Parameter              &                      & Estimate [\text{UI}_{68\%}] \\
+Model parameter        &                      & Posterior median [\text{UI}_{68\%}] \\
 \cmidrule{1-3}
-detection probability  & first                & 0.001 [0.0006, 0.002]       \\
-&                        second               & 0.08 [0.05, 0.13]           \\
-&                        third                & 0.48 [0.32, 0.67]           \\
-&                        adult                & 0.66 [0.48, 0.83]           \\
-random walk SD         & survival probability & 2.03 [1.79, 2.30]           \\
-&                        recruitment          & 1.45 [1.25, 1.70]           \\
+catch rate             & age 1                & 0.001 [0.0006, 0.002]               \\
+&                        age 2                & 0.08 [0.05, 0.13]                   \\
+&                        age 3                & 0.48 [0.32, 0.67]                   \\
+&                        age 4+               & 0.66 [0.48, 0.83]                   \\
+random walk SD         & survival probability & 2.03 [1.79, 2.30]                   \\
+&                        recruitment          & 1.45 [1.25, 1.70]                   \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -148,18 +155,31 @@ random walk SD         & survival probability & 2.03 [1.79, 2.30]           \\
 \clearpage
 \begin{table}
 \caption{\label{tab:gls}
-GLS model results.}
+Coefficients and standard errors (SE) from the GLS models 
+quantifying linear trends in the demographic rates through time.
+The models were fit on either a log (recruitment; population growth rate)
+or logit (survival probability) scale,
+and all response and predictor variables were z-scored prior to model fitting.
+Therefore, the coefficients can be compared as effect sizes 
+across all of the response variables.
+The autoregressive (AR) coefficients were included to account for temporal autocorrelation
+when estimating the year trends;
+0 indicates no autocorrelation, 
+while |1| indicates strong (positive or negative) autocorrelation 
+and statistical non-stationarity.
+}
 \setlength{\tabcolsep}{12pt}
 \begin{tabular}{llccc}
 \toprule
-Demographic rate       &        & Intercept (\pm~\text{SE}) & Slope (\pm~\text{SE}) & AR coefficient \\
+Response variable      &        & Intercept (\pm~\text{SE}) & Year slope (\pm~\text{SE}) & AR
+                                                                                coefficient \\
 \cmidrule{1-5}
-surival probability    & first  & 0.01  \pm~0.23            & 0.26  \pm~0.23        & 0.26           \\
-&                        second & 0.00  \pm~0.15            & 0.13  \pm~0.15        & -0.18          \\
-&                        third  & 0.04  \pm~0.54            & 0.25  \pm~0.44        & 0.80           \\
-&                        adult  & -0.02 \pm~0.26            & 0.55  \pm~0.25        & 0.53           \\
-recruitment            &        & -0.06 \pm~0.29            & -0.71 \pm~0.27        & 0.56           \\
-population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16         & -0.17          \\
+survival probability   & age 1  & ~0.01  \pm~0.23           & ~0.26 \pm~0.23        & ~0.26 \\
+&                        age 2  & ~0.00  \pm~0.15           & ~0.13 \pm~0.15        & -0.18 \\
+&                        age 3  & ~0.04  \pm~0.54           & ~0.25 \pm~0.44        & ~0.80 \\
+&                        age 4+ & -0.02 \pm~0.26            & ~0.55 \pm~0.25        & ~0.53 \\
+recruitment            &        & -0.06 \pm~0.29            & -0.71 \pm~0.27        & ~0.56 \\
+population growth rate &        & ~0.00  \pm~0.15           & ~0.08 \pm~0.15        & -0.21 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -173,7 +193,14 @@ population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16     
 \centering
 \includegraphics{../analysis/p_catch.pdf}
 \caption{\label{fig:p_catch}
-.
+Station-level catch (points) and 90\% posterior prediction intervals (shading) 
+from the demographic model.
+The prediction intervals include stochasticity arising from the Poisson sampling process,
+and therefore represent the predicted distribution of catch according to the model. 
+The solid lines are medians of the the prediction distributions and quantify the expected
+catch; note that this is not the same quantity as the estimated population density, 
+shown in Figure \ref{fig:p_dens}.
+The y-axis is log+1 transformed to accommodate zeros.
 }
 \end{figure}
 \clearpage
@@ -185,31 +212,10 @@ population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16     
 \centering
 \includegraphics{../analysis/p_dens.pdf}
 \caption{\label{fig:p_dens}
-.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-% ---------------------------------------------------------------------------------------
-\clearpage
-\begin{figure}
-\centering
-\includegraphics{../analysis/p_surv.pdf}
-\caption{\label{fig:p_surv}
-.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-% ---------------------------------------------------------------------------------------
-\clearpage
-\begin{figure}
-\centering
-\includegraphics{../analysis/p_rec.pdf}
-\caption{\label{fig:p_rec}
-.
+Lake-wide population density (solid line) inferred from the demographic model.
+Shading depicts 68\% uncertainty intervals, 
+matching the nominal coverage of standard errors.
+The y-axis is log transformed.
 }
 \end{figure}
 \clearpage
@@ -221,11 +227,56 @@ population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16     
 \centering
 \includegraphics{../analysis/p_lam.pdf}
 \caption{\label{fig:p_lam}
-.
+Asymptotic population growth rate (solid blue line) inferred from the demographic model.
+Shading depicts 68\% uncertainty intervals, 
+matching the nominal coverage of standard errors.
+The dashed horizontal line indiates a growth rate of 1,
+which corresponds to no change in the population size from one time step to the next.
+The solid black line represents the fitted values from the GLS model
+fit on a log-scale and then back-transformed 
+to match the scale of the population growth rate.
+Note however, that the y-axis of the figure is log-transformed, 
+thereby preserving the linearity of the data and model fit.
 }
 \end{figure}
 \clearpage
 % ---------------------------------------------------------------------------------------
+
+% ---------------------------------------------------------------------------------------
+\clearpage
+\begin{figure}
+\centering
+\includegraphics{../analysis/p_surv.pdf}
+\caption{\label{fig:p_surv}
+Logit-survival probability (solid colored lines) inferred from the demographic model.
+Shading depicts 68\% uncertainty intervals, 
+matching the nominal coverage of standard errors.
+The solid black line represents the fitted values from the GLS models
+fit separately for each age class.
+Note that logit-survival probability ranging from -5 to 5 
+corresponds to actual survival probability ranging from 0.007 to 0.993.
+}
+\end{figure}
+\clearpage
+% ---------------------------------------------------------------------------------------
+
+% ---------------------------------------------------------------------------------------
+\clearpage
+\begin{figure}
+\centering
+\includegraphics{../analysis/p_rec.pdf}
+\caption{\label{fig:p_rec}
+Log-recruitment $\text{capita}^{-1}$ (solid blue line) inferred from the demographic model.
+Shading depicts 68\% uncertainty intervals, 
+matching the nominal coverage of standard errors.
+The solid black line represents the fitted values from the GLS models.
+Note that log-recruitment ranging from -1 to 8 
+corresponds to actual log-recruitment ranging from 0.4 to 3000.
+}
+\end{figure}
+\clearpage
+% ---------------------------------------------------------------------------------------
+
 
 
 
@@ -249,7 +300,15 @@ population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16     
 \centering
 \includegraphics{../analysis/p_catch_reduced.pdf}
 \caption{\label{fig:p_catch_reduced}
-.
+Station-level catch (points) and 90\% posterior prediction intervals (shading) 
+from the reduced version of the demographic model 
+with survival and recruitment fixed through time.
+The prediction intervals include stochasticity arising from the Poisson sampling process,
+and therefore represent the predicted distribution of catch according to the model. 
+The solid lines are medians of the the prediction distributions and quantify the expected
+catch; note that this is not the same quantity as the estimated population density, 
+shown in Figure \ref{fig:p_dens_reduced}.
+The y-axis is log+1 transformed to accommodate zeros.
 }
 \end{figure}
 \clearpage
@@ -261,7 +320,12 @@ population growth rate &        & 0.00  \pm~0.15            & 0.00 \pm~0.16     
 \centering
 \includegraphics{../analysis/p_dens_reduced.pdf}
 \caption{\label{fig:p_dens_reduced}
-.
+Lake-wide population density (solid line) inferred from the 
+reduced version of the demographic model 
+with survival and recruitment fixed through time.
+Shading depicts 68\% uncertainty intervals, 
+matching the nominal coverage of standard errors.
+The y-axis is log transformed.
 }
 \end{figure}
 \clearpage
